--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>First Site</title>
 </head>
 <body>
+    <h1>First Site</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quos quia, natus dolorum nihil rem vel, magnam nisi debitis voluptas molestias autem at itaque officiis?</p>
 </body>
 </html>
